--- a/src/Client/Activities.Client/Components/Profiles/ProfileContent.razor
+++ b/src/Client/Activities.Client/Components/Profiles/ProfileContent.razor
@@ -11,13 +11,9 @@
         </MudPaper>
     </MudTabPanel>
     <MudTabPanel Text="Followers">
-        <MudPaper Width="95%" Style="padding: 10px">
-            <MudText>Followers Content</MudText>
-        </MudPaper>
+        <ProfileFollowers Profile="Profile" />
     </MudTabPanel>
     <MudTabPanel Text="Following">
-        <MudPaper Width="95%" Style="padding: 10px">
-            <MudText>Following Content</MudText>
-        </MudPaper>
+        <ProfileFollowings Profile="Profile"/>
     </MudTabPanel>
 </MudTabs>
