--- a/src/Client/Activities.Client/Components/Dashboard/Details/ActivityDetailsSidebar.razor
+++ b/src/Client/Activities.Client/Components/Dashboard/Details/ActivityDetailsSidebar.razor
@@ -11,7 +11,10 @@
             <MudImage Src="@(string.IsNullOrWhiteSpace(attendee.Image) ? "/images/user.png" : attendee.Image)" Height="50" />
             <div>
                 <MudLink Href="@($"/profile/{attendee.UserName}")">@attendee.DisplayName</MudLink>
-                <MudText Typo="Typo.body2" Color="Color.Warning">Following</MudText>
+                @if (attendee.Following)
+                {
+                    <MudText Typo="Typo.body2" Color="Color.Warning">Following</MudText>
+                }
             </div>
 
             @if (attendee.UserName == Activity.HostUserName)
