--- a/src/Client/Activities.Client/Components/Dashboard/ActivityDashboard.razor
+++ b/src/Client/Activities.Client/Components/Dashboard/ActivityDashboard.razor
@@ -3,6 +3,6 @@
         <ActivityList Activities="@Activities"/>
     </MudItem>
     <MudItem xs="3">
-        <ActivityFilters />
+        <ActivityFilters DateChanged="DateFilterChanged" ActivityFilterChanged="ActivityFilterChanged"/>
     </MudItem>
 </MudGrid>
